# b5

./: .gitignore  Cargo.toml  deploy.sh  sample_config.json
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220723_133540_add_blog_description.rs
src/: config.rs  format.rs  main.rs  posts.rs
src/entities/: blog_posts.rs  comments.rs  mod.rs  prelude.rs  users.rs
static/: main.css
static/fonts/playfair/: font.css
templates/: headers.stpl  page_head.stpl  page_title.stpl  post.stpl  posts.stpl  rss.stpl
