[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.13"
rand = "0.8.5"

dotenv = "0.15.0"
sea-orm = { version = "0.9.1", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

actix-web = "4"
actix-files = "0.6.1"

serde = "1.0"
serde_json = "1.0"

lazy_static = "1.4.0"
serde_derive = "1.0"

sailfish = "0.4.0"
pulldown-cmark = { version = "0.9.1", default-features = false }
html-escape = "0.2.11"